# pixie

./: CMakeLists.txt  README.md  config.linux.h
alembic/: AbcArchive.cpp  AbcArchive.h  CMakeLists.txt  ProcArgs.cpp  WriteGeo.cpp  WriteMaterial.cpp
cmake/: FindOpenEXR.cmake  FindOpenVDB.cmake
common/: CMakeLists.txt  algebra.cpp  algebra.h  containers.h  global.h  mathSpec.h  os.cpp
core/: CMakeLists.txt  atomic.h  attributes.cpp  attributes.h  brickmap.cpp  bsplinePatchgrid.cpp  cubemap.cpp  cubemap.h  curves.cpp  deepImage.cpp  deepImage.h  depository.cpp  dso.y  dsply.h  execute.cpp  executeMisc.cpp  fileResource.cpp  fileResource.h  gi.cpp  giFunctions.h  global_illum.h  harmonics.h  hcshader.cpp  ifexpr.y  init.cpp  irradiance.cpp  linsys.cpp  memory.cpp  memory.h  noise.cpp  object.cpp  object.h  occlusion.cpp  occlusion.h  options.cpp  options.h  patchUtils.h  patches.cpp  patches.h  patchgrid.cpp  (+79 more)
displays/: CMakeLists.txt
displays/file/: CMakeLists.txt  file.cpp  file_tiff.h
displays/framebuffer/: CMakeLists.txt  framebuffer.cpp  framebuffer.h
displays/openexr/: CMakeLists.txt  openexr.cpp
gui/: interface.h  opengl.cpp  opengl.h
precomp/: CMakeLists.txt  precomp.cpp
ptcfilter/: CMakeLists.txt  ptcfilter.cpp
py_ptc/: CMakeLists.txt  pyptc.i
py_ptc/py_ptc_tests/: ptctest.py
py_renderman/: CMakeLists.txt  pyri.i
py_renderman/py_ri_tests/: pointspoly.py  subdiv.py
render/: CMakeLists.txt  pixie.cpp
sdr/: CMakeLists.txt  sdr.cpp  sdr.h
sdrc/: CMakeLists.txt  sdr.cpp  sdrc.cpp  sl.l
sdrinfo/: CMakeLists.txt
shaders/: CMakeLists.txt
show/: CMakeLists.txt  show.cpp
texmake/: CMakeLists.txt  texmake.cpp
